docs/CURSO_SIU_ARIU/CLASE_5/Resultado Práctica-20251203/05.1-wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:6.2.0-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wp
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        - name: phpini
          mountPath: /usr/local/etc/php/php.ini
          subPath: php.ini
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      - name: phpini
        configMap:
          name: phpini
