docs/CURSO_SIU_ARIU/CLASE_5/Resultado Práctica-20251203/04.2-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
  clusterIP: None
