docs/CURSO_SIU_ARIU/CLASE_5/Resultado Práctica-20251203/06-wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
      #  type: LoadBalancer
  type: NodePort
