docs/CURSO_SIU_ARIU/CLASE_5/Resultado Práctica-20251203/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: 350m
spec:
  tls:
  - hosts:
    - wordpress.edk8.unpa.edu.ar
    secretName: wordpress.edk8.unpa.edu.ar
  rules:
  - host: wordpress.edk8.unpa.edu.ar
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress
            port:
              number: 80
